# docs/api-v1-openapi.json
@@ -2783,6 +2783,13 @@
           },
           {
             "in": "query",
+            "name": "project_id",
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "in": "query",
             "name": "orphan_filter",
             "schema": {
               "default": "hide",
